# krita-anime-skill

./: .gitignore  README.md  UPSTREAM.md  pyproject.toml
.agents/skills/krita-finegrained-anime/: SKILL.md
.agents/skills/krita-finegrained-anime/references/: plan-schema.md
.agents/skills/krita-finegrained-anime/scripts/: krita-anime.ps1  krita_anime.py
.claude/skills/krita-finegrained-anime/: SKILL.md
.github/workflows/: ci.yml
.opencode/skills/krita-finegrained-anime/: SKILL.md
.opencode/skills/krita-finegrained-anime/references/: anime-workflow.md
docs/: PROTOCOL.md  agent-installation.md  api-coverage-matrix.md  cli-mcp-parity-assessment.md  krita-api-inventory.md
docs/demos/: character-consistency-sheet.kra  fine-lineart-scene.kra  four-panel-storyboard.kra
examples/: anime-scene.json  storyboard.json
krita-plugin/: kritamcp.desktop
krita-plugin/kritamcp/: __init__.py  anime.py  history_store.py  payload_validator.py  qt_compat.py  rate_limiter.py  snapshot_store.py
scripts/: __init__.py  export_krita_api_inventory.py  install_agent_skill.ps1  install_agent_skill.py  install_plugin.ps1  krita_runner_smoke.py  render_krita_demos.py  smoke_krita.py  sync_agent_layouts.py  windows_preflight.py
skills/krita-finegrained-anime/: SKILL.md
skills/krita-finegrained-anime/agents/: openai.yaml
skills/krita-finegrained-anime/assets/: character-pack.template.json
skills/krita-finegrained-anime/scripts/: krita-anime.ps1
src/krita_anime/: __init__.py  cli.py  compiler.py  deepseek.py  geometry.py  models.py  svg.py
src/krita_cli/: __init__.py  _shared.py  app.py  cli.py  config_cmd.py  history.py
src/krita_cli/commands/: __init__.py  batch.py  brush.py  call.py  canvas.py  color.py  config.py  file_ops.py  health.py  history_cmd.py  introspect.py  layers.py  navigation.py  replay.py  rollback.py  selection.py  stroke.py
src/krita_client/: __init__.py  anime_models.py  client.py  config.py  models.py  schema.py
src/krita_mcp/: __init__.py  server.py
tests/: conftest.py  test_phase_11.py
tests/anime/: __init__.py  test_cli.py  test_client_actions.py  test_compiler.py  test_deepseek.py  test_geometry_svg.py  test_mcp_actions.py  test_models.py  test_plugin_helpers.py  test_plugin_registration.py
tests/e2e/: conftest.py  krita_driver.py  test_e2e.py  test_e2e_mock.py  test_krita_live.py
tests/integration/: test_api_capabilities.py  test_batch_cli.py  test_batch_client.py  test_cli.py  test_cli_coverage.py  test_cli_error_paths.py  test_cli_full.py  test_cli_success.py  test_config_cli.py  test_config_cmd_cli.py  test_history_cli.py  test_history_endpoint.py  test_introspect_cli.py  test_layers_cli.py  test_mcp_coverage.py  test_mcp_error_coverage.py  test_mcp_error_result.py  test_mcp_full.py  test_mcp_layer_tools.py  test_mcp_remaining_tools.py  test_mcp_selection_tools.py  test_mcp_server.py  test_mcp_success.py  test_replay_cli.py  test_rollback.py  test_rollback_cli.py  test_security_limits.py  test_selection_advanced.py  test_selection_cli_coverage.py  test_selection_client.py  test_selection_persistence.py
tests/packaging/: __init__.py  test_agent_layouts.py
tests/property/: test_input_sanitization.py  test_models.py  test_selection.py
tests/unit/: test_batch_models.py  test_client.py  test_client_coverage.py  test_client_internal.py  test_config.py  test_config_cmd.py  test_error_codes.py  test_history_store.py  test_mcp_batch.py  test_mcp_history_tool.py  test_models.py  test_payload_validator.py  test_replay_cmd.py  test_rollback_client.py  test_rollback_models.py  test_schema.py  test_security_config.py  test_selection_advanced_models.py  test_selection_models.py  test_selection_persistence_models.py  test_shared_coverage.py  test_snapshot_store.py  test_type_safety_coverage.py
types/krita/: __init__.pyi
